<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>Prototype</groupId>
  <artifactId>CucumberTestngProto</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>CucumberTestngProto</name>
  <url>http://maven.apache.org</url>

  <dependencies>
<!--     <dependency> -->
<!--       <groupId>junit</groupId> -->
<!--       <artifactId>junit</artifactId> -->
<!--       <version>3.8.1</version> -->
<!--       <scope>test</scope> -->
<!--     </dependency> -->
    <dependency>
    	<groupId>commons-io</groupId>
    	<artifactId>commons-io</artifactId>
    	<version>2.6</version>
	</dependency>
	<dependency>
         <groupId>com.relevantcodes</groupId>
         <artifactId>extentreports</artifactId>
         <version>2.41.2</version>
    </dependency>
    <dependency>				
    	<groupId>org.seleniumhq.selenium</groupId>
    	<artifactId>selenium-java</artifactId>
		<version>4.0.0</version>	
	</dependency>	
	
	<dependency>				
  		<groupId>org.testng</groupId>								
    	<artifactId>testng</artifactId>								
    	<version>6.10</version>								
    	<scope>compile</scope>							  		
	</dependency>

	
	<dependency>
		<groupId>org.apache.maven.surefire</groupId>
		<artifactId>surefire-testng</artifactId>
		<version>2.19.1</version>
	</dependency>
	<dependency>
		<groupId>org.apache.maven.surefire</groupId>
		<artifactId>surefire-testng-utils</artifactId>
		<version>2.19.1</version>
	</dependency>
	<dependency>
		<groupId>org.apache.maven.surefire</groupId>
		<artifactId>surefire-grouper</artifactId>
		<version>2.19.1</version>
	</dependency>
	<dependency>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-report-plugin</artifactId>
		<version>2.19.1</version>
	</dependency>
   	  
	<dependency>
    	<groupId>info.cukes</groupId>
    	<artifactId>cucumber-java</artifactId>
    	<version>1.2.5</version>
	</dependency>
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-jvm-deps</artifactId>
		<version>1.0.5</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-junit</artifactId>
		<version>1.2.5</version>
	</dependency>
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-testng</artifactId>
		<version>1.2.5</version>
	</dependency>
  </dependencies>
  
  <build>  
  	<plugins>
  		<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.6.1</version>
            <configuration>
                <source>1.8</source>
                <target>1.8</target>
            </configuration>
        </plugin>
        
        
        <plugin>
   			<groupId>com.trivago.rta</groupId>
   			<artifactId>cluecumber-report-plugin</artifactId>
   			<version>2.8.0</version>
   			<configuration>
       			<sourceJsonReportDirectory>${project.build.directory}/cucumber-report</sourceJsonReportDirectory>
       			<generatedHtmlReportDirectory>${project.build.directory}/Test_report</generatedHtmlReportDirectory>
   			</configuration>
  				<executions>
       			<execution>
           			<id>report</id>
           			<phase>post-integration-test</phase>
           			<goals>
               			<goal>reporting</goal>
           			</goals>
       			</execution>
   			</executions>
		</plugin>
  	
  		<plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-surefire-plugin</artifactId>
        	<version>2.19.1</version>
        	<configuration>
<!--         		<argLine>-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar -->
<!--             		</argLine> -->
        			<type>maven-plugin</type>
          			<source>1.8</source>
          			<target>1.8</target>
          			<suiteXmlFiles>
<!--             			<suiteXmlFile>./Resources/Test_Suites/Test_Report.xml</suiteXmlFile> -->
             			<suiteXmlFile>./src/test/resources/Test_Suites/Test_Cucumber_Report.xml</suiteXmlFile>
          			</suiteXmlFiles>
<!--           			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
        		</configuration>
        		
<!--         		 <dependencies> -->
<!--                     <dependency> -->
<!--                         <groupId>org.aspectj</groupId> -->
<!--                         <artifactId>aspectjweaver</artifactId> -->
<!--                         <version>1.9.6</version> -->
<!--                     </dependency> -->
<!--                 </dependencies> -->
  			</plugin>
  		</plugins>
  		<defaultGoal>test</defaultGoal>
  	</build>
  	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <selenium-version>4.0.0</selenium-version>
        <testng-version>6.10</testng-version>
        <log4j-version>2.14.1</log4j-version>
        <extentreports-version>5.0.8</extentreports-version>
        <maven-surefire-plugin-version>2.19.1</maven-surefire-plugin-version>
  	</properties>
  	<profiles>
		<profile>
            <id>parallel</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <suiteXmlFiles>
                                <suiteXmlFile>/Resources/Test_Suites/Test_Cucumber_Report.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
